--- a/src/common/header/Header.css
+++ b/src/common/header/Header.css
@@ -1,6 +1,6 @@
 .header
 {
-    background: color #222;
+    background-color: #222;
     height: 36px;
     padding-top: 8px;
     padding-bottom: 8px;
